tdf#108622: use correct type for last check timestamp during autocorrect

It's only supposed to check the files once every 2-mins, with
mismatching type that happens each time.

Change-Id: Ie9243cf928d952e28989dd981508de86cb7dbddb
Reviewed-on: https://gerrit.libreoffice.org/39428
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-on: https://gerrit.libreoffice.org/39467